Update layout and login, add HomePage, remove pdfGenerator

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gestion CV ISTA - OFPPT</title>
+    <title>Gestion des CV - ISTA Khemisset</title>
     <meta
       name="description"
       content="Application de gestion des CV pour l'administration ISTA/OFPPT"
